// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test checkbox=false 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#2AB2E2",
        "fontFamily": "Roboto-Regular",
        "fontSize": 23,
        "marginTop": 80,
        "textAlign": "center",
        "width": "90%",
      }
    }
  >
    legal.title
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 70,
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderColor": "black",
          "borderRadius": 10,
          "borderWidth": 0.5,
          "height": 50,
          "justifyContent": "center",
          "opacity": 1,
          "width": "90%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Roboto-Regular",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "color": "black",
            },
          ]
        }
      >
        legal.tos
      </Text>
    </View>
    <View
      style={
        Object {
          "marginTop": 20,
          "width": "90%",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderColor": "black",
            "borderRadius": 10,
            "borderWidth": 0.5,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "color": "black",
              },
            ]
          }
        >
          legal.privacy_policy
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "bottom": 40,
        "position": "absolute",
        "width": "80%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingBottom": 20,
          "width": "93%",
        }
      }
    >
      <View
        pointerEvents="auto"
      >
        <RNCCheckbox
          forwardedRef={null}
          onValueChange={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 32,
                "width": 32,
              },
              undefined,
            ]
          }
          tintColors={
            Object {
              "false": "#2AB2E2",
              "true": "#2AB2E2",
            }
          }
          value={false}
        />
      </View>
      <Text
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 13,
          }
        }
      >
        legal.checkbox
      </Text>
    </View>
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#99E4FF",
          "borderRadius": 10,
          "height": 50,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
      >
        next_btn_title
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test checkbox=true 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#2AB2E2",
        "fontFamily": "Roboto-Regular",
        "fontSize": 23,
        "marginTop": 80,
        "textAlign": "center",
        "width": "90%",
      }
    }
  >
    legal.title
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 70,
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderColor": "black",
          "borderRadius": 10,
          "borderWidth": 0.5,
          "height": 50,
          "justifyContent": "center",
          "opacity": 1,
          "width": "90%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Roboto-Regular",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "color": "black",
            },
          ]
        }
      >
        legal.tos
      </Text>
    </View>
    <View
      style={
        Object {
          "marginTop": 20,
          "width": "90%",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderColor": "black",
            "borderRadius": 10,
            "borderWidth": 0.5,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "color": "black",
              },
            ]
          }
        >
          legal.privacy_policy
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "bottom": 40,
        "position": "absolute",
        "width": "80%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingBottom": 20,
          "width": "93%",
        }
      }
    >
      <View
        pointerEvents="auto"
      >
        <RNCCheckbox
          forwardedRef={null}
          onValueChange={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 32,
                "width": 32,
              },
              undefined,
            ]
          }
          tintColors={
            Object {
              "false": "#2AB2E2",
              "true": "#2AB2E2",
            }
          }
          value={true}
        />
      </View>
      <Text
        onPress={[Function]}
        style={
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 13,
          }
        }
      >
        legal.checkbox
      </Text>
    </View>
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2AB2E2",
          "borderRadius": 10,
          "height": 50,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
      >
        next_btn_title
      </Text>
    </View>
  </View>
</View>
`;
